# SimpleDrawing

./: CMakeLists.txt  main.cpp
SimpleDrawing/: Brush.cpp  Brush.h  BufferCanvas.cpp  BufferCanvas.h  Circle.cpp  Circle.h  IBrush.h  ICanvas.h  IRenderable.h  Line.cpp  Line.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Utils.cpp  Utils.h
